# credit-risk

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py  template.yaml
.github/workflows/: ci.yml
configs/: aws.yaml  default.yaml  local.yaml
scripts/: generate_synthetic_data.py  run_api.py  train.py
src/credit_risk/api/: app.py  routes.py
src/credit_risk/aws/: dynamodb.py  lambda_handler.py  s3.py
src/credit_risk/config/: __init__.py  settings.py
src/credit_risk/data/: clean.py  load.py  validate.py
src/credit_risk/features/: engineering.py  preprocess.py
src/credit_risk/models/: calibrate.py  evaluate.py  explain.py  train.py
src/credit_risk/schemas/: config.py  payloads.py  registry.py  training.py
src/credit_risk/scoring/: predict.py  rules.py
src/credit_risk/storage/: __init__.py  artifacts.py  predictions.py
src/credit_risk/utils/: artifacts.py  logging.py
tests/: conftest.py
tests/integration/: test_api.py  test_training_pipeline.py
tests/unit/: test_config_loader.py  test_data_validation.py  test_feature_engineering.py  test_payload_schemas.py  test_rules.py
